--- a/apps/workspace-ui/src/app/core/pages/profile-tab/profile-tab.component.scss
+++ b/apps/workspace-ui/src/app/core/pages/profile-tab/profile-tab.component.scss
@@ -38,7 +38,7 @@ body {
   display: flex;
   align-items: center;
   margin-bottom: 20px;
-  margin-left: 5px;
+  margin-left: 50px;
 
   img {
     border-radius: 50%;
@@ -46,10 +46,19 @@ body {
 }
 
 .profile-text-container {
-  margin: 50px;
   width: 500px;
 }
-
+.label-2 {
+  color: rgba(30, 30, 30, 1);
+  font-family: 'Poppins';
+  font-style: normal;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0px;
+  text-decoration: none;
+  text-transform: none;
+}
 /* frame */
 .frame {
   width: 100%;
@@ -73,7 +82,6 @@ body {
   font-size: 90px;
 }
 .btn-upload {
-
   background-color: #fff;
   border: 1px solid rgba(212, 206, 191, 1);
   color: #000;
@@ -81,7 +89,7 @@ body {
   font-size: 20px;
   box-shadow: inset 0px 0px 2px 0px rgba(0, 0, 0, 0.18);
 }
-.img-avatar{
+.img-avatar {
   margin-right: 2%;
 }
 
@@ -90,10 +98,9 @@ body {
   display: flex;
   align-items: center;
   margin-bottom: 20px;
-  margin-left: 5px;
+  margin-left: 50px;
 }
 .localization-text-container {
-  margin: 50px;
   width: 500px;
 }
 
@@ -148,13 +155,11 @@ body {
 
 //general profile settings
 .general-text-settings-container {
-  margin: 50px;
   width: 500px;
 }
 /* frame-12 */
 .frame-12 {
-  margin: 20px;
-
+  margin: 50px;
   background-color: rgba(234, 229, 214, 1);
   display: flex;
 }
@@ -176,7 +181,7 @@ body {
   font-family: 'Poppins';
   font-style: normal;
   font-size: 20px;
-  font-weight: 700;
+  font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0px;
   text-decoration: none;
@@ -201,7 +206,7 @@ body {
   font-family: 'Poppins';
   font-style: normal;
   font-size: 20px;
-  font-weight: 700;
+  font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0px;
   text-decoration: none;
@@ -212,7 +217,7 @@ body {
   font-family: 'Poppins';
   font-style: normal;
   font-size: 20px;
-  font-weight: 700;
+  font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0px;
   text-decoration: none;
@@ -223,7 +228,7 @@ body {
   font-family: 'Poppins';
   font-style: normal;
   font-size: 20px;
-  font-weight: 700;
+  font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0px;
   text-decoration: none;
@@ -240,21 +245,10 @@ body {
   padding-top: 1%;
 }
 .general-profile-settings-container {
-  // display: flex;
-  // flex-wrap: wrap;
-
   textarea {
     width: 400px; /* Largeur désirée */
     height: 200px; /* Hauteur désirée */
   }
-
-  // .avatar-icon {
-  //   width: 100px;
-  //   height: 100px;
-  //   object-fit: cover;
-  //   border-radius: 50%;
-  //   margin-right: 10px;
-  // }
 
   /* Bio */
   .bio {
@@ -262,5 +256,69 @@ body {
     background-color: rgba(245, 241, 228, 1);
     border: 1px solid rgba(212, 206, 191, 1);
     box-shadow: inset 0px 0px 2px 0px rgba(0, 0, 0, 0.18);
+  }
+
+  
+  /* The switch - the box around the slider */
+  .switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+  }
+
+  .slider:before {
+    position: absolute;
+    content: '';
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+  }
+
+  input:checked + .slider {
+    background-color: #2196f3;
+  }
+
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2196f3;
+  }
+
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+
+  .slider.round:before {
+    border-radius: 50%;
   }
 }
