--- a/apps/workspace-ui/src/app/core/pages/profile-tab/profile-tab.component.html
+++ b/apps/workspace-ui/src/app/core/pages/profile-tab/profile-tab.component.html
@@ -124,12 +124,13 @@
             placeholder=" Chauncey.vonanulapi@divinityareacritics.com"
             [(ngModel)]="inputEmail"
           />
-          
+
           <!-- Rounded switch -->
           <label class="switch">
             <input type="checkbox" />
             <span class="slider round"></span>
           </label>
+          <label class="label-13">Show publicy ?</label>
         </div>
 
         <p class="desc-5">
@@ -149,11 +150,12 @@
             placeholder=" The Notorious Cat of Divinity's Area Critics"
             [(ngModel)]="inputJobTitle"
           />
-           <!-- Rounded switch -->
-           <label class="switch">
+          <!-- Rounded switch -->
+          <label class="switch">
             <input type="checkbox" />
             <span class="slider round"></span>
           </label>
+          <label class="label-13">Show publicy ?</label>
         </div>
       </div>
       <div class="general-bio">
