chore: improving repo readability + various fixes
- fix page content placement for login screen
- fix navbar alignment
- organize common types and assets for better readability
- remove types duplications

--- a/apps/workspace-ui/src/app/shared/components/nav-bar/nav-bar.component.scss
+++ b/apps/workspace-ui/src/app/shared/components/nav-bar/nav-bar.component.scss
@@ -1,14 +1,25 @@
 @import '../../../../styles/constants';
 
-.custom-navbar {
+:host {
+  width: 100%;
+  max-height: 53px;
+}
+
+.navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color:map-get($colors, primary-one);
- 
+  background-color: map-get($colors, primary-one);
+
   /* LOGO_AGAMIS */
   .logo-agamis {
-   padding: 10px;
+    padding: 10px;
+    display: flex;
+    gap: 10px;
+
+    agamis-ws-lib-svg-agamis-text {
+      margin-top: 1px; // vertical alignment for better user perception
+    }
   }
 
   .navbar-search {
@@ -16,8 +27,7 @@
       display: flex;
       align-items: center;
       position: relative;
-  
-      
+
       .imageSearch {
         position: absolute;
         left: 0px;
@@ -25,26 +35,25 @@
         width: 10px;
       }
 
-      input[type="search"] {
+      input[type='search'] {
         padding: 8px 30px 8px 15px;
         border: none;
         outline: none;
         border-radius: 18px 18px 2px 18px;
         background-color: map-get($colors, light);
-        color: map-get($colors,primary-one);
+        color: map-get($colors, primary-one);
         width: 600px;
-        text-indent:25px;
-    
+        text-indent: 25px;
       }
-      .clear-search{
+      .clear-search {
         position: absolute;
-        right: 10px; 
+        right: 10px;
         top: 50%;
         transform: translateY(-50%);
         border: none;
         background: transparent;
-        font-size: 20px; 
-        cursor:pointer;
+        font-size: 20px;
+        cursor: pointer;
         color: map-get($colors, primary-one);
       }
     }
@@ -61,7 +70,7 @@
         display: flex;
         align-items: center;
         text-decoration: none;
-        color: map-get($colors,primary-one);
+        color: map-get($colors, primary-one);
 
         label {
           cursor: pointer;
@@ -70,7 +79,6 @@
     }
   }
 
-  
   // Styles du menu déroulant de la nav-bar
   .nav-item {
     position: relative;
@@ -102,9 +110,9 @@
       top: 100%;
       left: 0;
       z-index: 1000;
-      background-color: map-get($colors,primary-one);
-      color: map-get($colors,light);
-      border: 1px solid map-get($colors,strong-emphasis);
+      background-color: map-get($colors, primary-one);
+      color: map-get($colors, light);
+      border: 1px solid map-get($colors, strong-emphasis);
       box-sizing: border-box;
       max-width: 100%;
       overflow: hidden;
@@ -113,8 +121,8 @@
 
       .user-info {
         padding: 10px;
-        background-color: map-get($colors,primary-one);
-        border-bottom: 1px solid map-get($colors,strong-emphasis);
+        background-color: map-get($colors, primary-one);
+        border-bottom: 1px solid map-get($colors, strong-emphasis);
 
         span {
           display: block;
@@ -139,15 +147,15 @@
             button {
               display: block;
               width: 100%;
-              background-color: map-get($colors,primary-one);
-              
+              background-color: map-get($colors, primary-one);
+
               text-align: left;
               padding: 10px;
               border: none;
               cursor: pointer;
 
               &:hover {
-                background-color: map-get($colors,strong-emphasis);
+                background-color: map-get($colors, strong-emphasis);
               }
             }
           }
@@ -167,7 +175,7 @@
     height: 31px;
     left: 14.93px;
     top: 10.56px;
-    background-color: map-get($colors,light);
+    background-color: map-get($colors, light);
   }
 
   .notif-button {
@@ -179,12 +187,9 @@
     margin-right: 5px;
   }
 
-
-
   .icons {
     padding-right: 5px;
   }
-
 
   .pseudo {
     color: #fff;
@@ -213,5 +218,4 @@
       margin-right: 10px;
     }
   }
-  
 }
