--- a/apps/workspace-ui/src/app/app.component.scss
+++ b/apps/workspace-ui/src/app/app.component.scss
@@ -3,6 +3,8 @@
 :host {
   justify-content: center;
   align-items: center;
+  display: flex;
+  flex-direction: column;
   height: 100%;
 }
 
@@ -14,5 +16,7 @@
 
 .outlet {
   width: 100%;
+  display: flex;
+  align-items: center;
   flex-grow: 1;
 }
