--- a/apps/workspace-ui/src/app/shared/components/nav-bar/nav-bar.component.html
+++ b/apps/workspace-ui/src/app/shared/components/nav-bar/nav-bar.component.html
@@ -1,11 +1,11 @@
 
 <!-- Partie NavBar -->
-<nav class="custom-navbar">
+<nav class="navbar">
   <!-- Section gauche de la barre de navigation : contient le logo et le titre -->
   <div class="logo-agamis">
     <!-- Icône SVG du logo agamis -->
-      <agamis-ws-svg-agamis-logo [fillColor]="Color.LIGHT"></agamis-ws-svg-agamis-logo>
-      <agamis-ws-svg-agamis-text [fillColor]="Color.LIGHT" ></agamis-ws-svg-agamis-text>
+      <agamis-ws-lib-svg-agamis-logo [fillColor]="Color.LIGHT"></agamis-ws-lib-svg-agamis-logo>
+      <agamis-ws-lib-svg-agamis-text [fillColor]="Color.LIGHT" ></agamis-ws-lib-svg-agamis-text>
   </div>
 <!-- Barre de recherche -->
 <form class="navbar-search">
@@ -26,7 +26,7 @@
   <!-- Item pour 'Mon Entreprise' avec icône et texte -->
   <div class="nav-item">
       <a href="#" name="entreprise">
-        <agamis-ws-svg-entreprise class=""></agamis-ws-svg-entreprise>
+        <agamis-ws-svg-community/>
         <label for="entreprise">{{orgInfo?.label}}</label>
       </a>
     </div>
@@ -34,8 +34,7 @@
     <!-- Item pour 'Notifications' avec icône et texte -->
     <div class="nav-item">
       <a href="#" name="notif">
-        <agamis-ws-svg-notification ></agamis-ws-svg-notification>
-        
+        <agamis-ws-svg-notification/>
       </a>
     </div>
     
