--- a/apps/workspace-ui/src/app/core/pages/profile-tab/profile-tab.component.scss
+++ b/apps/workspace-ui/src/app/core/pages/profile-tab/profile-tab.component.scss
@@ -98,12 +98,10 @@ body {
 }
 .img-avatar {
   margin-right: 2%;
-  
 }
-.avatar-icon{
+.avatar-icon {
   width: 6vw;
 }
-
 
 //localization
 .localization {
@@ -250,7 +248,7 @@ body {
   text-transform: none;
 }
 
-.label-13{
+.label-13-1 {
   color: rgba(30, 30, 30, 1);
   font-family: 'Poppins';
   font-style: normal;
@@ -260,9 +258,21 @@ body {
   letter-spacing: 0px;
   text-decoration: none;
   text-transform: none;
-  margin-left : 5px;
-  
+  margin-left: 5px;
 }
+.label-13-2 {
+  color: rgba(146, 146, 146, 1);
+  font-family: 'Poppins';
+  font-style: normal;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0px;
+  text-decoration: none;
+  text-transform: none;
+  margin-left: 5px;
+}
+
 .general-bio {
   padding-top: 1%;
 }
