--- a/apps/login-ui/src/app/core/pages/otp-page/otp-page.component.scss
+++ b/apps/login-ui/src/app/core/pages/otp-page/otp-page.component.scss
@@ -8,12 +8,6 @@
   height: 100%;
 }
 
-.separator {
-  height: 2px;
-  flex-grow: 1;
-  background-color: map-get($colors, strong-emphasis);
-}
-
 .content {
   display: flex;
   flex-direction: column;
@@ -63,76 +57,82 @@
 .body {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   font-size: 14px;
+  color: map-get($colors, strong-emphasis);
 
-  > .field {
+  > .fields {
     display: flex;
+    flex-direction: row;
     margin-bottom: 13px;
-    position: relative;
-    height: 31px;
-    border-radius: 4px;
     align-items: center;
     justify-content: space-between;
-    background-color: map-get($colors, soft-anchoring);
-    > label {
-      margin-left: 11px;
-    }
+    column-gap: 10px;
     > input {
-      height: 100%;
+      height: 65px;
+      width: 50px;
       box-sizing: border-box;
-      padding: 0 0 0 10px;
-      width: 353px;
+      font-size: 43px;
+      text-align: center;
       border-radius: 4px;
       border: 1px solid map-get($colors, soft-emphasis);
-    }
-    > .tail-button {
-      position: absolute;
-      right: 2px;
-      border-radius: 50%;
-      height: 24px;
-      width: 24px;
-      border: 0px;
-      cursor: pointer;
-      > * {
-        transform: scale(120%);
-      }
     }
   }
 
   > .actions {
     display: flex;
     margin-top: 6px;
-    flex-direction: row;
-    column-gap: 10px;
+    flex-direction: column;
+    column-gap: 20px;
     justify-content: space-between;
     align-items: center;
 
-    > .lost-pass {
-      flex-wrap: nowrap;
-      flex-shrink: 0;
-      margin-left: 11px;
-      text-decoration: none;
-      background-color: transparent;
-      border: none;
-      cursor: pointer;
-      color: map-get($colors, primary-three)
+    > span {
+      display: flex;
+      flex-direction: row;
+      position: relative;
+      > span.timer {
+        position: absolute;
+        left: calc(-50% - 20px);
+        top: -50%;
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        > agamis-ws-login-svg-loading-spin {
+          height: 34px;
+          margin-right: 15px;
+          flex-shrink: 0;
+          animation: fadeIn 0.2s linear, spin 1s linear infinite;
+        }
+      }
+      > .resend {
+        flex-wrap: nowrap;
+        flex-shrink: 0;
+        text-decoration: none;
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+        color: map-get($colors, primary-three);
+      }
+
+      &.disabled {
+        > .resend {
+          color: map-get($colors, strong-emphasis);
+          cursor: not-allowed;
+        }
+      }
     }
 
     > div {
       display: flex;
       align-items: center;
-      column-gap: 10px;
+      flex-direction: column;
+      row-gap: 10px;
       > .error-msg {
         color: map-get($colors, error);
         text-align: right;
         flex-grow: 0;
-      }
-
-      > agamis-ws-login-svg-loading-spin {
-        height: 34px;
-        margin-right: 15px;
-        flex-shrink: 0;
-        animation: fadeIn 0.2s linear, spin 1s linear infinite;
       }
 
       > .submit {
@@ -144,7 +144,7 @@
         background-color: map-get($colors, primary-three);
         color: map-get($colors, light);
         cursor: pointer;
-  
+
         &:disabled {
           background-color: map-get($colors, soft-emphasis);
           cursor: progress;
@@ -195,14 +195,12 @@
     row-gap: 9px;
     > a {
       cursor: pointer;
-      text-decoration: none;
       display: inline-flex;
       justify-content: center;
       font-size: 13px;
       flex-grow: 1;
       margin: 4px 0;
       background-color: white;
-      color: map-get($colors, strong-emphasis);
       border: 1px solid map-get($colors, soft-emphasis);
       border-radius: 4px;
       padding: 9px 0;
@@ -213,5 +211,5 @@
         margin-left: 4px;
       }
     }
-  }  
+  }
 }
