chore[30]: modif ShowPublicly

--- a/apps/workspace-ui/src/app/core/pages/profile-tab/profile-tab.component.html
+++ b/apps/workspace-ui/src/app/core/pages/profile-tab/profile-tab.component.html
@@ -123,14 +123,14 @@
 
           <!-- Rounded switch -->
           <label class="switch">
-            <input (click)="toggleShowPublicyEmail($event)" type="checkbox" />
+            <input (click)="toggleShowPubliclyEmail($event)" type="checkbox" />
             <span class="slider round"></span>
           </label>
-          <label class="label-13-1" *ngIf="ShowPublicyEmail"
-            >Show publicy ?</label
+          <label class="label-13-1" *ngIf="ShowPubliclyEmail"
+            >Show publicly ?</label
           >
-          <label class="label-13-2" *ngIf="!ShowPublicyEmail"
-            >Show publicy ?</label
+          <label class="label-13-2" *ngIf="!ShowPubliclyEmail"
+            >Show publicly ?</label
           >
         </div>
 
@@ -153,15 +153,15 @@
           />
           <!-- Rounded switch -->
           <label class="switch">
-            <input (click)="toggleShowPublicyJob($event)" type="checkbox" />
+            <input (click)="toggleShowPubliclyJob($event)" type="checkbox" />
             <span class="slider round"></span>
           </label>
 
-          <label class="label-13-1" *ngIf="ShowPublicyJob"
-            >Show publicy ?</label
+          <label class="label-13-1" *ngIf="ShowPubliclyJob"
+            >Show publicly ?</label
           >
-          <label class="label-13-2" *ngIf="!ShowPublicyJob"
-            >Show publicy ?</label
+          <label class="label-13-2" *ngIf="!ShowPubliclyJob"
+            >Show publicly ?</label
           >
         </div>
       </div>
