chore: update height button

--- a/apps/workspace-ui/src/app/core/pages/tab-list/tab-list.component.scss
+++ b/apps/workspace-ui/src/app/core/pages/tab-list/tab-list.component.scss
@@ -11,6 +11,7 @@
   .button {
     background-color: map-get($colors, soft-anchoring);
     border: none;
+    height: 30px;
     padding: 10px 20px;
     cursor: pointer;
     color:  map-get($colors, primary-one);
